--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -253,5 +253,7 @@
     <string name="GetMidIdButton">GetMidId</string>
     <string name="removeNaviAichat">removeNaviAichat</string>
     <string name="removeHeaderButton">removeHeaderButton</string>
+    <string name="SendEnterChange">SendEnterChange</string>
+
 
 </resources>
